--- a/ckanext/amplus/templates/base.html
+++ b/ckanext/amplus/templates/base.html
@@ -3,4 +3,5 @@
 {% block styles %}
   {{ super() }}
   {% resource 'amplus/css/custom.css' %}
+  <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,700" rel="stylesheet">
 {% endblock %}
