Add quick stats

--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -1,5 +1,6 @@
 /* Please check https://docs.ckan.org/en/2.8/theming/ for the already existing stylesheets in CKAN core. */
 
 /* Add your custom LESS code here */
-
+@import "_variables.less";
 @import "_footer.less";
+@import "_stats.less";
