Fixes and modifications

--- a/ckanext/amplus/fanstatic/less/_footer.less
+++ b/ckanext/amplus/fanstatic/less/_footer.less
@@ -1,9 +1,20 @@
+@font-face {
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fanstatic/public/fonts/barlow-latin-400.woff2') format('woff2'),
+         url('../../fanstatic/public/fonts/barlow-latin-400.woff') format('woff'),
+         url('/fanstatic/public/fonts/barlow-latin-500.woff2') format('woff2'),
+         url('/fanstatic/public/fonts/barlow-latin-500.woff') format('woff')
+  }
+
+
 body {
-    font-family: Barlow;
+    font-family: 'Barlow', sans-serif;
 }
 
 .site-footer {
-    background: #FFF;
+    background: @white;
     padding: 100px 120px;
     & .logo img{
         max-height: 30px;
@@ -11,24 +22,24 @@ body {
 }
 
 .text-description {
-    color: silver;
+    color: @silver;
     font-size: 15px;
     font-weight: 500;
     margin-top: 25px;
 }
 
 .footer-nav-title {
-    color: #9F1A86;
+    color: @brand-secondary;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .footer-nav li {  
     padding: 5px 0;
     & a {
-        color: silver;
+        color: @silver;
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 600;
     }
 }
 
@@ -36,9 +47,9 @@ body {
     float: right;
 }
 
-@media (min-width: 1200px) {
+@media (@breakpoint-xl) {
     .footer-links {
-        text-align: left!important;
+        text-align: left;
         display: flex;
         justify-content: flex-end; 
         & div {
@@ -51,18 +62,18 @@ body {
     }
  }
 
-@media (max-width: 1200px) {
+@media (@breakpoint-lg) {
     .attribution {
         text-align: center;
         padding:0px 0px 30px 0px;
     }
     .footer-links {
-        float: none!important;
-        text-align: center!important;
+        float: none;
+        text-align: center;
     }
  }
 
- @media only screen and (max-width : 768px) {
+ @media only screen and (@breakpoint-sm) {
     .footer-links div{
         padding: 20px 0px;
     }
