Initial logo and text implementation

--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -1,3 +1,7 @@
 /* Please check https://docs.ckan.org/en/2.8/theming/ for the already existing stylesheets in CKAN core. */
 
 /* Add your custom LESS code here */
+
+@import "_variables.less";
+@import "_categories.less";
+@import "_promoted.less";
