--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -7,6 +7,6 @@
 @silver: #C0C0C0;
 @black: #000000;
 
-@breakpoint-xl: ~'min-width: 1200px';
-@breakpoint-lg: ~'max-width: 1200px';
-@breakpoint-sm: ~'max-width: 768px';
+@breakpoint-xl: ~'1200px';
+@breakpoint-lg: ~'1200px';
+@breakpoint-sm: ~'768px';
