--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -2,5 +2,10 @@
 
 /* Add your custom LESS code here */
 
-@import "_footer.less";
 @import "_variables.less";
+@import "_responsive-xl.less";
+@import "_responsive-lg.less";
+@import "_responsive-sm.less";
+
+@import "_footer.less";
+
