Modify existing html files for the portal logo and text

--- a/ckanext/amplus/templates/home/snippets/promoted.html
+++ b/ckanext/amplus/templates/home/snippets/promoted.html
@@ -16,8 +16,8 @@
     {% if intro %}
       {{ h.render_markdown(intro) }}
     {% else %}
-      <h1 class="page-heading">{{ _("Open Data Portal") }}</h1>
-      <p>
+      <p class="page-heading">{{ _("Open Data Portal") }}</p>
+      <p class="promoted-desc">
         {% trans %}Quickly reintermediate integrated resources after premium sources.
         Conveniently maintain corporate catalysts for change 
         {% endtrans %}
