--- a/ckanext/amplus/templates/home/layout2.html
+++ b/ckanext/amplus/templates/home/layout2.html
@@ -9,26 +9,17 @@
       </div>
     </div>
 </div>
-<div role="main">
-    <div class="container">
-        <div class="row row2">
-        <div class="col-md-6 col2">
-            {% block featured_organization %}
-            {% snippet 'home/snippets/featured_organization.html' %}
-            {% endblock %}
+<div class="group-container">
+    <p class="group-heading">{{_("Explore Topics")}}</p>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              {% block featured_group %}
+                {% snippet 'home/snippets/custom_featured_group.html' %}
+              {% endblock %}
+            </div> 
+          </div>
         </div>
-        <div class="col-md-6 col1">
-            {% block featured_group %}
-            {% snippet 'home/snippets/featured_group.html' %}
-            {% endblock %}
-        </div>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        {% block stats %}
-            {% snippet 'home/snippets/stats.html' %}
-        {% endblock %}
     </div>
 </div>
