--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -15,7 +15,10 @@
     }
     & .page-heading {
         padding-top: 30px;
-        font-size: 40px;
+        font-size: 50px;
         color: @brand-primary;
+    }
+    & .promoted-desc {
+        font-size: 18px;
     }
 }
