--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -1,7 +1,9 @@
-@brand-primary: #6033A7;
-@brand-secondary: #9F1A86;
-@brand-tertiary: #DE0064;
-@brand-background: #EFECF4;
+@brand-primary:     #6033A7;
+@brand-secondary:   #9F1A86;
+@brand-tertiary:    #DE0064;
+@brand-background:  #EFECF4;
+@text-dark:         #414141;
+@oval-bg:           #CFBEDC;
 
 @white: #FFFFFF;
 @silver: #C0C0C0;
