Template header updated and styles for navigation

--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -1,3 +1,17 @@
 /* Please check https://docs.ckan.org/en/2.8/theming/ for the already existing stylesheets in CKAN core. */
 
 /* Add your custom LESS code here */
+
+@import "_variables.less";
+@import "_responsive-xl.less";
+@import "_responsive-lg.less";
+@import "_responsive-sm.less";
+
+@import "_base.less";
+@import "_typography.less";
+@import "_fonts.less";
+@import "_nav.less";
+@import "_buttons.less";
+
+@import "_footer.less";
+
