Update Follow Us links

--- a/ckanext/amplus/templates/footer.html
+++ b/ckanext/amplus/templates/footer.html
@@ -1,58 +1,50 @@
-<footer class="site-footer">
-    <div class="container-fluid">
-        {% block footer_content %}
-      <div class="row">
-        <div class="col-lg-4 col-md-12 col-sm-12 attribution">
-          {% block footer_attribution %}
-            <ul class="list-unstyled">
-              {% block footer_links %}
-              <a class="logo" href="{{ h.url_for('home.index') }}"><img class="dada" src="{{ h.url_for_static('/base/images/Amplus-OpenDataPortal-logo.png') }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
-              <p class="text-description py-20">
-                {% trans %} Globally productize client-based e-markets for mission-critical results. 
-                Efficiently communicate performance based networks with collaborative vortals. 
-                Distinctively myocardinate an expanded array of methodologies for best-of-breed web services. 
-                Objectively leverage other's efficient.
-                {% endtrans %}
-              </p>
-              {% endblock %}
-            </ul>
+{% block footer_content %}
+  <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 attribution">
+      {% block footer_attribution %}
+        <ul class="list-unstyled">
+          {% block footer_links %}
+          <a class="logo" href="{{ h.url_for('home.index') }}"><img class="dada" src="{{ h.url_for_static('/base/images/Amplus-OpenDataPortal-logo.png') }}" alt="{{ g.site_title }}" title="{{ g.site_title }}" /></a>
+          <p class="text-description py-20">
+            {% trans %} Globally productize client-based e-markets for mission-critical results.
+            Efficiently communicate performance based networks with collaborative vortals.
+            Distinctively myocardinate an expanded array of methodologies for best-of-breed web services.
+            Objectively leverage other's efficient.
+            {% endtrans %}
+          </p>
           {% endblock %}
-        </div>
-        <div class="col-lg-8 col-md-12 col-sm-12 text-left footer-links">
-          {% block footer_nav %}
-          <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
-            {% block header_site_navigation_tabs %} 
-              <p class="footer-nav-title">{{ _('Navigation')}}</p>
-              <ul class="list-unstyled footer-nav">
-                {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
-                    ('group_index', _('Groups')), ('home.about', _('About')) ) }} 
-              </ul>
-          </div>
-            <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
-              <ul class="list-unstyled footer-nav">
-                {# Finalise implementation #}
-                {{ h.build_nav_main( ('home.index', _('News')), ('home.index', _('Our Blog')),
-                ('home.index', _('Link')), ('home.index', _('Link')) ) }} 
-              </ul>
-            </div>
-            <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
-              <p class="footer-nav-title">{{ _('Follow Us') }} </p>
-              <ul class="list-unstyled footer-nav">
-                {# Support social media link on backend #}
-                {{ h.build_nav_main( ('home.index', _('LinkedIn')), ('home.index', _('GitHub')),
-                ('home.index', _('Twitter')), ('home.index', _('Facebook')) ) }} 
-              </ul>
-            </div>
-            {% endblock %}
-          {% endblock %}
-        </div>
-      </div>
+        </ul>
+      {% endblock %}
     </div>
-    {% endblock %}
-  
-    {% block footer_debug %}
-      {% if g.debug %}
-        {% include 'snippets/debug.html' %}
-      {% endif %}
-    {% endblock %}
-  </footer>
+    <div class="col-lg-8 col-md-12 col-sm-12 text-left footer-links">
+      {% block footer_nav %}
+      <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
+        {% block header_site_navigation_tabs %}
+          <p class="footer-nav-title">{{ _('Navigation')}}</p>
+          <ul class="list-unstyled footer-nav">
+            {{ h.build_nav_main( ('search', _('Datasets')), ('organizations_index', _('Organizations')),
+                ('group_index', _('Groups')), ('home.about', _('About')) ) }}
+          </ul>
+      </div>
+        <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
+          <ul class="list-unstyled footer-nav">
+            {# Finalise implementation #}
+            {{ h.build_nav_main( ('home.index', _('News')), ('home.index', _('Our Blog')),
+            ('home.index', _('Link')), ('home.index', _('Link')) ) }}
+          </ul>
+        </div>
+        <div class="col-sm-4 col-xs-12 col-md-4 col-lg-2 mb-md-0 mb-3">
+          <p class="footer-nav-title">{{ _('Follow Us') }} </p>
+          <ul class="list-unstyled footer-nav">
+            <li><a href="https://www.linkedin.com/company/amplusdata/" target="_blank">{{ _('LinkedIn') }}</a></li>
+            <li><a href="https://github.com/amplus-data/" target="_blank">{{ _('GitHub') }}</a></li>
+            <li><a href="https://twitter.com/AmplusData/" target="_blank">{{ _('Twitter') }}</a></li>
+            <li><a href="https://www.facebook.com/AmplusData/" target="_blank">{{ _('Facebook') }}</a></li>
+          </ul>
+        </div>
+        {% endblock %}
+      {% endblock %}
+    </div>
+  </div>
+</div>
+{% endblock %}
