--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -1,7 +1,10 @@
 
+
+
 @brand-primary: #6033A7;
 @brand-secondary: #9F1A86;
 @brand-tertiary: #DE0064;
+@brand-quaternary: #7A64A6;
 
 @white: #FFFFFF;
 @silver: #C0C0C0;
