--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -70,8 +70,8 @@
         <div>
           {% block header_logo %} {% if g.site_logo %}
           <div class="logo-box">
-            <a class="logo" href="{{ h.url_for('home.index') }}"><img class="img-responsive"
-                src="{{ h.url_for_static('/base/images/Amplus-Open-Data-portal.svg') }}" alt="{{ g.site_title }}"
+            <a class="logo" href="{{ h.url_for('home.index') }}"><img class="img-responsive" 
+                src="{{ h.url_for_static('/base/images/Amplus-Open-Data-portal.png') }}" alt="{{ g.site_title }}"
                 title="{{ g.site_title }}" /> </a>
           </div>
           {% else %}
