Added responcive padding on navitems

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -6,5 +6,13 @@
     .footer-links {
         float: none;
         text-align: center;
+    }  
+    .masthead .navigation .nav-pills.list-custom {
+        & > li {
+          & a,
+          & button{
+            padding: 2.2rem .7rem;
+          }
+        }
     }
  }
