Updated font paths

--- a/ckanext/amplus/fanstatic/less/_fonts.less
+++ b/ckanext/amplus/fanstatic/less/_fonts.less
@@ -2,29 +2,29 @@
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/barlow-latin-400.woff2') format('woff2'),
-       url('../fonts/barlow-latin-400.woff') format('woff')
+  src: url('../public/fonts/barlow-latin-400.woff2') format('woff2'),
+       url('../public/fonts/barlow-latin-400.woff') format('woff')
 }
        
 @font-face {
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/barlow-latin-500.woff2') format('woff2'),
-  url('./fonts/barlow-latin-500.woff') format('woff')
+  src: url('../public/fonts/barlow-latin-500.woff2') format('woff2'),
+  url('../public/fonts/barlow-latin-500.woff') format('woff')
 }
 
 @font-face {
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/barlow-latin-600.woff2') format('woff2'),
-       url('../fonts/barlow-latin-600.woff') format('woff'),
+  src: url('../public/fonts/barlow-latin-600.woff2') format('woff2'),
+       url('../public/fonts/barlow-latin-600.woff') format('woff'),
 }
 @font-face {
   font-family: 'Barlow';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/barlow-latin-700.woff2') format('woff2'),
-       url('../fonts/barlow-latin-700.woff') format('woff'),
+  src: url('../public/fonts/barlow-latin-700.woff2') format('woff2'),
+       url('../public/fonts/barlow-latin-700.woff') format('woff'),
 }
