Updated padding on nav items

--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -4,8 +4,9 @@
     &.active > a{
       background-color: @brand-quaternary;
     }
-    & a {
-      padding: 2.2rem 1.5rem;
+    & a,
+    & button{
+      padding: 2.2rem 2rem;
       background-color: @brand-primary;
       border-radius: 0;
       font-size: 18px;
