Updated header HTML so it extends the default template and update the style

--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -8,3 +8,11 @@
   outline: none;
   border: none;
 }
+.btn-input-search{
+  &:hover{
+    background-color: inherit;
+  }
+}
+.btn.btn-default{
+  border: none;
+}
