--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -46,10 +46,18 @@
     overflow: visible;
   }
 }
-#field-sitewide-search {
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+.search{
+  overflow: hidden;
+}
+.search-box{
   width: 50%;
   padding: 2.5rem;
+  
+}
+#field-sitewide-search {
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  padding: 0 2.5rem;
+  height: 50px;
   border-radius: 0;
   outline: none;
   border: none;
