--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -1,53 +1,12 @@
-{% block header_wrapper %} {% block header_account %}
+{% ckan_extends %}
+{% block header_wrapper %} 
+{% block header_account %}
 {% if c.userobj %}
 <header class="account-masthead" >
   <div class="container-fluid navigation-login bg-main">
-    {% block header_account_container_content %} {% if c.userobj %}
-    <div class="account avatar authed" data-module="me" data-me="{{ c.userobj.id }}">
-      <ul class="list-unstyled">
-        {% block header_account_logged %} {% if c.userobj.sysadmin %}
-        <li>
-          <a href="{{ h.url_for(controller='admin', action='index') }}" title="{{ _('Sysadmin settings') }}">
-            <i class="fa fa-gavel" aria-hidden="true"></i>
-            <span class="text">{{ _('Admin') }}</span>
-          </a>
-        </li>
-        {% endif %}
-        <li>
-          <a href="{{ h.url_for('user.read', id=c.userobj.name) }}" class="image" title="{{ _('View profile') }}">
-            {{ h.gravatar((c.userobj.email_hash if c and c.userobj else ''), size=22) }}
-            <span class="username">{{ c.userobj.display_name }}</span>
-          </a>
-        </li>
-        {% set new_activities = h.new_activities() %}
-        <li class="notifications {% if new_activities > 0 %}notifications-important{% endif %}">
-          {% set notifications_tooltip = ngettext('Dashboard (%(num)d new item)', 'Dashboard (%(num)d new items)', new_activities)
-          %}
-          <a href="{{ h.url_for('dashboard.index') }}" title="{{ notifications_tooltip }}">
-            <i class="fa fa-tachometer" aria-hidden="true"></i>
-            <span class="text">{{ _('Dashboard') }}</span>
-            <span class="badge">{{ new_activities }}</span>
-          </a>
-        </li>
-        {% block header_account_settings_link %}
-        <li>
-          <a href="{{ h.url_for('user.edit', id=c.userobj.name) }}" title="{{ _('Edit settings') }}">
-            <i class="fa fa-cog" aria-hidden="true"></i>
-            <span class="text">{{ _('Settings') }}</span>
-          </a>
-        </li>
-        {% endblock %} {% block header_account_log_out_link %}
-        <li>
-          <a href="{{ h.url_for('/user/_logout') }}" title="{{ _('Log out') }}">
-            <i class="fa fa-sign-out" aria-hidden="true"></i>
-            <span class="text">{{ _('Log out') }}</span>
-          </a>
-        </li>
-        {% endblock %} {% endblock %}
-      </ul>
-    </div>
-    {% else %}
-    {% endif %} {% endblock %}
+    {% block header_account_container_content %}
+    {{super()}}
+    {% endblock %}
   </div>
 </header>
 {%else%}
@@ -55,11 +14,11 @@
 {%endif%}
 {% endblock %}
 <header class="navbar navbar-static-top masthead bg-main p-0">
-  {% block header_debug %} {% if g.debug and not g.debug_supress_header %}
-  <div class="debug">Controller : {{ c.controller }}<br />Action : {{ c.action }}</div>
-  {% endif %} {% endblock %}
+  {% block header_debug %} 
+  {{super()}} 
+  {% endblock %}
   <div class="container-fluid navigation-wrapper p-0">
-    <div class="container-fluid navigation-right p-0 bg-main">
+    <div class="navigation-right p-0 bg-main">
       <div class="navbar-right">
         <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggle collapsed"
           type="button">
@@ -114,11 +73,15 @@
         <form class="section input-search m-0 bg-white" action="{% url_for controller='package', action='search' %}"
           method="get">
           <div class="field">
-            <label
-              for="field-sitewide-search">{% block header_site_search_label %}{{ _('Search Datasets') }}{% endblock %}</label>
-            <input id="field-sitewide-search" type="text" class="form-control mx-auto" name="q"
-              placeholder="{{ _('Search') }}" />
-            <button class="btn-search" type="submit"></button>
+            <div class="input-group mx-auto search-box">
+              <input id="field-sitewide-search" type="text" class="form-control " name="q"
+                placeholder="{{ _('Search') }}" />
+              <div class="input-group-btn">
+                <!-- <button class="btn btn-default btn-input-search" type="submit" value="search">
+                  <i class="fa fa-search"></i>
+                </button> -->
+              </div>
+            </div>
           </div>
         </form>
       </div>
