added btn i search input

--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -8,11 +8,13 @@
   outline: none;
   border: none;
 }
+.btn.btn-default{
+  background-color: #fff;
+  outline: none;
+  border:none;
+}
 .btn-input-search{
   &:hover{
     background-color: inherit;
   }
-}
-.btn.btn-default{
-  border: none;
 }
