--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -77,9 +77,9 @@
               <input id="field-sitewide-search" type="text" class="form-control " name="q"
                 placeholder="{{ _('Search') }}" />
               <div class="input-group-btn">
-                <!-- <button class="btn btn-default btn-input-search" type="submit" value="search">
+                <button class="btn btn-default btn-input-search" type="submit" value="search">
                   <i class="fa fa-search"></i>
-                </button> -->
+                </button>
               </div>
             </div>
           </div>
