added some variables

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -1,10 +1,12 @@
 
-
-
 @brand-primary: #6033A7;
 @brand-secondary: #9F1A86;
 @brand-tertiary: #DE0064;
 @brand-quaternary: #7A64A6;
+@brand-extra-light: #EBD3E6;
+
+@gray-medium: #414141;
+@gray-light: #E6E6E6;
 
 @white: #FFFFFF;
 @silver: #C0C0C0;
@@ -13,3 +15,4 @@
 @breakpoint-xl: ~'1200px';
 @breakpoint-lg: ~'1200px';
 @breakpoint-sm: ~'768px';
+
