Style header navigation and logo on smaller screens

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -11,8 +11,16 @@
         & > li {
           & a,
           & button{
-            padding: 2.2rem .7rem;
+            padding: 2.2rem .5rem;
+            font-size: 15px;
+            & img{
+              max-width: 18px;
+              max-height: 18px;
+            }
           }
         }
+    }
+    .logo-box{
+      max-width: 250px;
     }
  }
