Style search toggle btn

--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -8,14 +8,10 @@
   outline: none;
   border: none;
 }
-.btn.btn-default{
-  max-height: 50px ;
-  background-color: #fff;
-  outline: none;
-  border:none;
-}
 .btn-input-search{
-  &:hover{
-    background-color: inherit;
-  }
+  padding: 1.4rem;
+  color: #fff;
+  background-color: @brand-primary;
+  border: none;
+  outline:none;
 }
