--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -3,12 +3,14 @@
 /* Add your custom LESS code here */
 
 @import "_variables.less";
+@import "_typography.less";
 
 
 @import "_nav.less";
 @import "_fonts.less";
 @import "_buttons.less";
-@import "_typography.less";
+
+@import "_search_form.less";
 @import "_footer.less";
 
 @import "_responsive-xl.less";
