Add resnsponcive search input

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -23,4 +23,18 @@
     .logo-box{
       max-width: 250px;
     }
+    #dataset-search-form {
+        &>* {
+          min-width: 50%;
+        }
+    
+        &>*:first-child {
+          min-width: 100%;
+          flex: 1 0 50%;
+        }
+    
+        &>p {
+          max-width: 100%;
+        }
+      }
  }
