Update search input btn

--- a/ckanext/amplus/fanstatic/less/_buttons.less
+++ b/ckanext/amplus/fanstatic/less/_buttons.less
@@ -15,3 +15,10 @@
   border: none;
   outline:none;
 }
+.btn-default{
+  border: none;
+  &:hover{
+    color: #fff;
+    background-color: @brand-secondary;
+  }
+}
