--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -1,40 +1,33 @@
 @media (max-width: @breakpoint-lg) {
-    .attribution {
-        text-align: center;
-        padding:0px 0px 30px 0px;
+  .attribution {
+    text-align: center;
+    padding: 0px 0px 30px 0px;
+  }
+
+  .footer-links {
+    float: none;
+    text-align: center;
+  }
+
+  .search-input-group {
+    margin-bottom: 2rem;
+  }
+
+  #dataset-search-form {
+    &>* {
+      min-width: 50%;
     }
-    .footer-links {
-        float: none;
-        text-align: center;
-    }  
-    .masthead .navigation .nav-pills.list-custom {
-        & > li {
-          & a,
-          & button{
-            padding: 2.2rem .5rem;
-            font-size: 15px;
-            & img{
-              max-width: 18px;
-              max-height: 18px;
-            }
-          }
-        }
+
+    &>*:first-child {
+      min-width: 100%;
+      flex: 1 0 50%;
     }
-    .logo-box{
-      max-width: 250px;
+
+    &>p {
+      max-width: 100%;
     }
-    #dataset-search-form {
-        &>* {
-          min-width: 50%;
-        }
-    
-        &>*:first-child {
-          min-width: 100%;
-          flex: 1 0 50%;
-        }
-    
-        &>p {
-          max-width: 100%;
-        }
-      }
- }
+    &> .control-order-by{
+        padding-right: 0;
+    }
+  }
+}
