--- a/ckanext/amplus/fanstatic/less/_search_form.less
+++ b/ckanext/amplus/fanstatic/less/_search_form.less
@@ -11,19 +11,19 @@
     color: @gray-medium;
   }
 }
-#dataset-search-form {
+.search-form{
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
   &>* {
-    min-width: 25%;
+    max-width: 25%;
   }
   &>*:first-child {
     order: -2;
     margin-right: 1.5rem;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    min-width: 48%;
+    min-width: ~"calc(50% - 1.5rem)";
   }
   &>p {
     max-width: 100%;
