--- a/ckanext/amplus/fanstatic/less/_responsive-sm.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-sm.less
@@ -1,5 +1,5 @@
 @media only screen and (max-width: @breakpoint-sm) {
-    .footer-links div{
-        padding: 20px 0px;
+    .homepage .insights {
+        padding: 100px 50px;
     }
 }
