--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -6,6 +6,8 @@
 @import "_responsive-xl.less";
 @import "_responsive-lg.less";
 @import "_responsive-sm.less";
+@import "_responsive-xs.less";
 
 @import "_footer.less";
+@import "_insights.less";
 
