--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -1,3 +1,19 @@
-@brand-primary:         #6033A7;
-@brand-secondary:       #9F1A86;
-@brand-tertiary:        #DE0064;
+@brand-secondary: #9F1A86;
+@brand-tertiary: #DE0064;
+@brand-primary:     #6033A7;
+@brand-secondary:   #9F1A86;
+@brand-tertiary:    #DE0064;
+@brand-background:  #EFECF4;
+@text-dark:         #414141;
+@oval-bg:           #CFBEDC;
+
+@white: #FFFFFF;
+@silver: #C0C0C0;
+@silver:#9E9E9E;
+@black: #000000;
+
+@breakpoint-xl: ~'1200px';
+@breakpoint-lg: ~'1200px';
+@breakpoint-sm: ~'768px';
+@breakpoint-sm: ~'990px';
+@breakpoint-xs: ~'768px';
