--- a/ckanext/amplus/templates/page.html
+++ b/ckanext/amplus/templates/page.html
@@ -1,5 +1,48 @@
 {% ckan_extends %}
-
+{%- block content %}
+{% block maintag %}{{ super() }}{% endblock %}
+<div id="content" class="container-fluid">
+  {% block main_content %}
+  {% block flash %}
+  {{ super() }}
+  {% endblock %}
+  <div class="row flex flex-justify-end flex-wrap {% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
+    {#
+              The pre_primary block can be used to add content to before the
+              rendering of the main content columns of the page.
+              #}
+    {% block pre_primary %}
+    {{ super() }}
+    {% endblock %}
+    {% block secondary %}
+    <aside class="secondary col-md-3 col-sm-12">
+      
+      {% block secondary_content %}{% endblock %}
+</aside>
+    {% endblock %}
+    <div class="col-md-9 col-xs-12 bg-light">
+    {% block primary %}
+    
+      <div class="row">
+    <div class="col-sm-12 ">
+      <div class="breadcrumb-box">
+        {% block toolbar %}
+        {{ super() }}
+        {% endblock %}
+     
+      {% block primary_content %}
+      {{ super() }}
+      {% endblock %}
+    </div>
+  </div>
+</div>
+</div>
+    {% endblock %}
+  </div>
+  {% endblock %}
+</div>
+</div>
+{% endblock -%}
 {% block footer %}
 <footer class="site-footer">
   <div class="container-fluid">
@@ -7,4 +50,3 @@
   </div>
 </footer>
 {% endblock %}
-
