Fix styling bug

--- a/ckanext/amplus/fanstatic/less/_stats.less
+++ b/ckanext/amplus/fanstatic/less/_stats.less
@@ -2,7 +2,7 @@ body {
     background: #FFF;
 }
 
-.homepage.layout-2 .stats {
+.stats {
     display: flex;
     justify-content: center;
     align-content: center;
@@ -16,7 +16,7 @@ body {
     }
 }
 
-.homepage.layout-2 .stat-content {
+.stat-content {
     padding: 15px 0px;
     width: 250px;
     display: inline-flex;
