--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -8,6 +8,7 @@
 
 @import "_nav.less";
 @import "_breadcrumb.less";
+@import "_navigation_tabs.less";
 @import "_fonts.less";
 @import "_buttons.less";
 
