--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -10,6 +10,7 @@
 @import "_breadcrumb.less";
 @import "_navigation_tabs.less";
 @import "_list_item.less";
+@import "_resource_item.less";
 @import "_fonts.less";
 @import "_buttons.less";
 
