Add styling for the View All button

--- a/ckanext/amplus/fanstatic/less/_insights.less
+++ b/ckanext/amplus/fanstatic/less/_insights.less
@@ -6,6 +6,21 @@ body {
 .insights {
     background: @white;
     padding: 100px 140px;
+    text-align: center;
+
+    & .view-link {
+        color: @white;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    & .view-all {
+        background: @brand-primary;
+        box-shadow: 0 10px 10px 0 rgba(88, 61, 144, 0.31);
+        padding: 20px 60px;
+        margin: 50px 0;
+        border: none;
+    }
     
     & .panel-row {
         display: flex;
