--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -1,24 +1,25 @@
 {% ckan_extends %}
+
 {% block header_wrapper %} 
 {% block header_account %}
 {% if c.userobj %}
 <header class="account-masthead" >
-  <div class="container-fluid navigation-login bg-main">
+  <div class="container-fluid">
     {% block header_account_container_content %}
-    {{super()}}
+    {{ super() }}
     {% endblock %}
+
   </div>
 </header>
-{%else%}
-<div></div>
-{%endif%}
+{% endif %}
 {% endblock %}
-<header class="navbar navbar-static-top masthead bg-main p-0">
+
+<header class="navbar navbar-static-top masthead">
   {% block header_debug %} 
-  {{super()}} 
+    {{ super() }} 
   {% endblock %}
-  <div class="container-fluid navigation-wrapper p-0">
-    <div class="navigation-right p-0 bg-main">
+
+    
       <div class="navbar-right">
         <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggle collapsed"
           type="button">
@@ -26,44 +27,28 @@
         </button>
       </div>
       <div class="{{ g.header_class }} navbar-left">
-        <div>
-          {% block header_logo %} {% if g.site_logo %}
-          <div class="logo-box">
-            <a class="logo" href="{{ h.url_for('home.index') }}"><img class="img-responsive" 
-                src="{{ h.url_for_static('/base/images/Amplus-Open-Data-portal.png') }}" alt="{{ g.site_title }}"
-                title="{{ g.site_title }}" /> </a>
-          </div>
-          {% else %}
-          <h1>
-            <a href="{{ h.url_for('home.index') }}">{{ g.site_title }}</a>
-          </h1>
-          {% if g.site_description %}
-          <h2>{{ g.site_description }}</h2>{% endif %} {% endif %} {% endblock %}
-        </div>
+          {% block header_logo %} {{ super() }} {% endblock %}
+
       </div>
-      <div class="collapse navbar-collapse bg-main m-0 p-0" id="main-navigation-toggle">
+      <div class="collapse navbar-collapse" id="main-navigation-toggle">
           {% block header_site_navigation %}
           <nav class="section navigation">
-            <ul class="nav nav-pills list-custom">
+            <ul class="nav nav-pills">
               {% block header_site_navigation_tabs %}
-              {{super()}}
-              <li class="navigation-setting-item navigation-search"><button
-                  data-target="#main-navigation-search" data-toggle="collapse" class="btn-search" type="button">
-                  <img src="/base/images/search-icon.svg" />
-                </button></li>
+                {{ super() }}
               {% if c.userobj %}
-              {%else%}
+              {% else %}
               {% block header_account_notlogged %}
-              <li><a href="{{ h.url_for('/user/_login')  }}">
+              <li><a href="{{ h.url_for('/user/login')  }}">
                   <div><img src="/base/images/login-icon.svg" /></div>
                 </a></li>
               {% if h.check_access('user_create') %}
-              <li><a href="{{ h.url_for('/user/_register')  }}">
+              <li><a href="{{ h.url_for('/user/register')  }}">
                   <div><img src="/base/images/register-icon.svg" /></div>
                 </a></li>
               {% endif %}
-  
               {% endblock %}
+
               {% endif %}
               {% endblock %}
   
@@ -71,23 +56,6 @@
           </nav>
           {% endblock %} {% block header_site_search %}
         {%endblock%}
-      </div>
-      <div class="collapse navbar-collapse search p-0" id="main-navigation-search">
-        <form class="section input-search m-0 bg-white" action="{% url_for controller='package', action='search' %}"
-          method="get">
-          <div class="field">
-            <div class="input-group mx-auto search-box">
-              <input id="field-sitewide-search" type="text" class="form-control " name="q"
-                placeholder="{{ _('Search') }}" />
-              <div class="input-group-btn">
-                <button class="btn btn-default btn-input-search" type="submit" value="search">
-                  <i class="fa fa-search"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
+
 </header>
 {% endblock %}
