header responsive and remove extra class

--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -46,8 +46,7 @@ body {
       background-color: @brand-quaternary;
     }
 
-    & a,
-    & button {
+    & a{
       padding: 2.5rem 2rem;
       background-color: @brand-primary;
       border-radius: 0;
