--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -7,11 +7,10 @@
         float: none;
         text-align: center;
     }  
-    .masthead .navigation .nav-pills.list-custom {
+    .masthead .navigation .nav-pills.nav {
         & > li {
-          & a,
-          & button{
-            padding: 2.2rem .5rem;
+          & a{
+            padding: 2.2rem 1rem;
             font-size: 15px;
             & img{
               max-width: 18px;
@@ -20,7 +19,7 @@
           }
         }
     }
-    .logo-box{
+    .masthead .logo{
       max-width: 250px;
     }
  }
