Update width on search items

--- a/ckanext/amplus/fanstatic/less/_search_form.less
+++ b/ckanext/amplus/fanstatic/less/_search_form.less
@@ -17,7 +17,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   &>* {
-    max-width: 25%;
+    min-width: 25%;
   }
   &>*:first-child {
     order: -2;
