Add background variable

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -4,6 +4,7 @@
 @brand-tertiary: #DE0064;
 @brand-quaternary: #7A64A6;
 @brand-extra-light: #EBD3E6;
+@brand-background: #efecf4;
 
 @gray-medium: #414141;
 @gray-light: #E6E6E6;
