Import base and flex less files for layout

--- a/ckanext/amplus/fanstatic/less/custom.less
+++ b/ckanext/amplus/fanstatic/less/custom.less
@@ -3,10 +3,12 @@
 /* Add your custom LESS code here */
 
 @import "_variables.less";
+@import "_base.less";
 @import "_typography.less";
 
 
 @import "_nav.less";
+@import "_flex.less";
 @import "_fonts.less";
 @import "_buttons.less";
 
