--- a/ckanext/amplus/templates/home/index.html
+++ b/ckanext/amplus/templates/home/index.html
@@ -1,35 +1,42 @@
-{% resource 'c3charts/main' %}
-
 {% ckan_extends %}
 
-{% block primary_content %}
-{{ super() }}
+    {% block blogs_wrapper %}
+    {% set blogs = h.get_recent_blog_posts(4) %}
 
-<div class="insights">
-    {% set blogs = h.get_recent_blog_posts(4) %} {% if blogs %}
-    <p class="group-heading">{{_("Insights")}}</p>
-    <div class="container-fluid">
-      <div class="row panel-row">
-        {% for item in blogs %}
-        <div class="col-md-3 col-sm-4 col-xs-12 panel">
-          {% if item.image %}
-          <a class="item" href="{{ h.url_for(controller='ckanext.pages.controller:PagesController', action='blog_show', page='/' + item.name) }}">
-            <div class="image-wrap">
-              <img class="image" src="{{ item.image }}" alt="photo"> {% endif %}
+    {# g.homepage_blogs is returned as String not Boolean! #}
+    {% if g.homepage_blogs == 'True' and blogs %}
+    <div class="blogs">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1">
+                {% block blogs_heading %}
+                {{ super() }}
+              {% endblock %}
+              <div class="row">
+                  {% for item in blogs %}
+                      <div class="col-md-3 col-sm-4 col-xs-12">
+                          <div class="box">
+                              {% if item.image %}
+                              <a href="{{ h.url_for(controller='ckanext.pages.controller:PagesController', action='blog_show', page='/' + item.name) }}">
+                                <img src="{{ item.image }}" alt="{{ item.title }}" class="media-image item-image">
+                              </a>
+                              {% endif %}
+                              <div class="item-body">
+                                  <a href="{{ h.url_for(controller='ckanext.pages.controller:PagesController', action='blog_show', page='/' + item.name) }}">
+                                    <h3 class="title media-heading">{{ item.title }}</h3>
+                                  </a>
+                                  <p class="description">{{ item.content|striptags|truncate(300) }}</p>
+                              </div>
+                          </div>
+                      </div>
+                  {% endfor %}
+              </div>
+              {% block blog_archive_button %}
+                {{ super() }}
+              {% endblock %}
             </div>
-            <div class="body">
-              <p class="title" role="heading">{{ item.title }}</p>
-              <p class="description" role="text">{{ item.content|striptags|truncate(300) }}</p>
-            </div>
-          </a>
+          </div>
         </div>
-        {% endfor %}
-      </div>
-      <a class="view-link" href="{{ h.url_for(action='blog_index', controller='ckanext.pages.controller:PagesController') }}">
-          <button class="view-all" type="button">{{_("View All")}}</button>
-        </a>
     </div>
     {% endif %}
- </div>
-
-{% endblock %}
+    {% endblock %}
