--- a/ckanext/amplus/fanstatic/less/_insights.less
+++ b/ckanext/amplus/fanstatic/less/_insights.less
@@ -3,75 +3,57 @@ body {
     color: @text-dark;
 }
 
-.insights {
+.homepage .blogs {
     background: @white;
-    padding: 100px 140px;
-    text-align: center;
 
-    & .view-link {
-        color: @white;
+    .container-fluid {
+        >.row {
+            >[class*='col-'] {
+                display: block;
+            }
+        }
+    }
+
+    .h2 {
+        font-size: 40px;
+        font-weight: 400;
+    }
+
+    .box {
+        box-shadow: 0 0 30px 0 fade(#000, 10%);
+        margin: 60px 0px;
+        border: none;
+        transition: .3s;
+
+        &:hover {
+            box-shadow: 0 0 30px 0 fade(@brand-primary, 30%);
+
+            a {
+                text-decoration: none;
+            }
+        }
+    }
+
+    .btn-view-all {
+        padding: 15px 70px;
         font-size: 16px;
         font-weight: 700;
+        box-shadow: 0 10px 10px 0 fade(@text-dark, 30%);
     }
 
-    & .view-all {
-        background: @brand-primary;
-        box-shadow: 0 10px 10px 0 rgba(88, 61, 144, 0.31);
-        padding: 20px 60px;
-        margin: 50px 0;
-        border: none;
-    }
-    
-    & .panel-row {
-        display: flex;
-        flex-wrap: wrap;
-      }
-    & .panel-row > [class*='col-'] {
-        display: flex;
-        flex-direction: column;
+    .title {
+        color: @text-dark;
+        font-size: 20px;
+        font-weight: 600;
+        padding: 10px 20px;
+        margin: 0;
     }
 
-    & .group-heading {
-        font-size: 40px;
-        text-align: center;
+    .description {
+        color: @silver;
+        font-size: 14px;
         font-weight: 400;
-        padding: 40px 0 80px 0;
-    }    
-
-    & .panel {
-        padding: 0;
-        margin: 0px 10px 20px 10px;
-        box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
-        > a:hover {
-            text-decoration: none;
-        }
-        & .body {
-            & .title {
-                color: @text-dark;
-                font-size: 20px;
-                font-weight: 600;
-                padding: 10px 20px;
-                margin: 0;
-            }
-            & .description {
-                color: @silver;
-                font-size: 14px;
-                font-weight: 400;
-                padding: 0px 20px 20px 20px;
-                margin: 0;
-            }
-        }
-        & .image-wrap {
-            display: inline-block;
-            overflow: hidden;
-            width: 100%;
-            height: 130px;
-            text-align: center;
-            & .image {
-                width: 100%;
-                height: inherit;
-            }
-        }
+        padding: 0px 20px 20px 20px;
+        margin: 0;
     }
 }
-
