Remove extra & on less file

--- a/ckanext/amplus/fanstatic/less/_responsive-lg.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-lg.less
@@ -28,28 +28,28 @@
     .masthead .logo{
       max-width: 250px;
     }
-    &> .control-order-by{
+    > .control-order-by{
         padding-right: 0;
     }
-  }
+  
   .search-input-group {
     margin-bottom: 2rem;
   }
   .primary {
     .search-form {
-      &>* {
+      >* {
         min-width: 50%;
         width: 50%;
       }
-      &>*:first-child {
+      >*:first-child {
         min-width: 100%;
         width: 100%;
         flex: 1 0 50%;
       }
-      &>h2{
+      >h2{
        padding-left: 0;
       }
-      &>.control-order-by {
+      >.control-order-by {
         padding-right: 0;
       }
     }
