--- a/ckanext/amplus/fanstatic/less/_breadcrumb.less
+++ b/ckanext/amplus/fanstatic/less/_breadcrumb.less
@@ -2,13 +2,13 @@
 .toolbar{
   margin: 6rem 0 0 3rem;
   & .breadcrumb {
-    &>*:not(:first-child) {
+    >*:not(:first-child) {
       &:before {
         content: ">";
         color: @gray-medium;
       }
     }
-    & li {
+     li {
       color: @gray-medium;
       &.active {
         &>a {
