Add gutter and shadow variables

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -12,7 +12,19 @@
 @silver: #C0C0C0;
 @black: #000000;
 
+@shadow-light: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+@shadow-brand: 0 0 10px 0 rgba(159, 26, 135, 0.2);
+
 @breakpoint-xl: ~'1200px';
 @breakpoint-lg: ~'1200px';
+@breakpoint-md: ~'1000px';
 @breakpoint-sm: ~'768px';
+@breakpoint-xs: ~'500px';
 
+@gutter-small: 1rem;
+@gutter-medium: @gutter-small * 1.5;
+@gutter-large: @gutter-small * 3;
+
+@gutter-list-item-small: 2rem;
+@gutter-list-item-medium: @gutter-list-item-small * 2;
+@gutter-list-item-large: @gutter-list-item-small * 3;
